<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.SignUpActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/loading_please_wait"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:src="@drawable/ic_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/first_name"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etFirstName"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/last_name"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etLastName"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/email"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etEmail"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/password"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etPassword"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/phone"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etPhone"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/address"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etAddress"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/gender"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp" />

                <RadioGroup
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>